reportbug (4.3) UNRELEASED; urgency=low

  * reportbug/ui/gtk2_ui.py:
    - fix crash when showing menu options
    - make the textbox containing error information wider

 -- Luca Bruno <lethalman88@gmail.com>  Thu, 07 May 2009 21:38:45 +0200

reportbug (4.2) unstable; urgency=low

  [ Sandro Tosi ]
  * reportbug/__init__.py
    - bump reportbug version
  * bin/reportbug
    - resolved regression about not being able to select ui from cli, moving the
      check for attachments existance out of the ui check code. Now all the
      attachment files are checked for existance and it won't exit at the first
      missing. Thanks to Michael Meskes, Goncalo Marrafa and Florentin Duneau
      for the reports; Closes: #525407, #524857, #526054
    - added max number of characters allowed for report subject; thanks to Hong
      Jen Yee for the report and Carl Chenet for the patch; Closes: #364626
    - decode also email address (previously only realname was) when offering
      configuration; thanks to James Vega for the report and to Carl Chenet for
      the patch: Closes: #524297
    - clarified in the warning message that reportbug.debian.org superseded
      master|bugs.d.o as smtphost; also merged the check fo the previous 2
      hosts; thanks to Goswin von Brederlow for the report; Closes: #525856
  * reportbug/utils.py
    - fixed a typo in redirecting to /dev/null when calling lsb_release; thanks
      to Carl Chenet for the report and patch; Closes: #523684
    - handle import of pwd and tempfile in a try..catch, since they are platform
      specific, so that there is a minimum of functionalities available even if
      those modules are not present; thanks to Ritesh Raj Sarraf for the report
      and patch; Closes: #523816
  * bin/querybts
    - replaced the exit messages, with a less confusing one; thanks to A Costa
      for the report and to Carl Chenet for the patch; Closes: #358555

  [ Luca Bruno ]
  * reportbug/ui/gtk2_ui.py