@@ -3,8 +3,10 @@ reportbug (4.3) UNRELEASED; urgency=low
   * reportbug/ui/gtk2_ui.py:
     - fix crash when showing menu options
     - make the textbox containing error information wider
+    - implement show_report(). Thanks to James Vega for the report;
+      Closes: 525762
 
- -- Luca Bruno <lethalman88@gmail.com>  Thu, 07 May 2009 21:38:45 +0200
+ -- Luca Bruno <lethalman88@gmail.com>  Mon, 04 May 2009 23:32:56 +0200
 
 reportbug (4.2) unstable; urgency=low
 
